// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copies arrow function body block onto hidden class methods arguments.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a, b) => {
      arguments;

      return a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods arrow function in constructor.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.onClick = e => e.target.value;
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods async functions expression body.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = async (a, b) => await b(a);
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods async functions.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = async (a, b) => {
      return await a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods block body.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a, b) => {
      return a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods default params.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a = \\"foo\\") => {
      return \`\${a}bar\`;
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods destructured params.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = ({ a }, { b }) => {
      return \`\${a}\${b}\`;
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods expression body.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.onClick = e => e.target.value;
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods nested arguments.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a, b) => {
      () => {
        arguments;
      };

      return a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods nested new.target.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a, b) => {
      () => {
        new.target;
      };

      return a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods new.target.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a, b) => {
      new.target;

      return a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods not a function.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = 2;
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods not an arrow function.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = function (a, b) {
      return a(b);
    };
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods same name as class method.js 1`] = `
"\\"use strict\\";

class Foo {
  constructor() {
    this.bar = (a, b) => {
      return a(b);
    };
  }

  bar() {
    return 2;
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`copies arrow function body block onto hidden class methods static property.js 1`] = `
"\\"use strict\\";

class Foo {}

Foo.bar = (a, b) => {
  return a(b);
};

;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Foo, \\"Foo\\", __FILENAME__);
}();

;"
`;

exports[`tags potential React components bindings.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.C = undefined;

var _leftPad = require(\\"left-pad\\");

var _leftPad2 = _interopRequireDefault(_leftPad);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const A = 42;
function B() {
  function R() {}
  class S {}
  const T = 42;
}
class C {
  U() {
    function V() {
      class W {}
    }
  }

  __reactstandin__regenerateByEval(key, code) {
    this[key] = eval(code);
  }

}
exports.C = C;
const D = class X {};
let E = D;
var Y = require(\\"left-pad\\");
var { Z } = require(\\"left-pad\\");

const _default = React.createClass({
  displayName: \\"_default\\"
});

exports.default = _default;
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(A, \\"A\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(B, \\"B\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(C, \\"C\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(D, \\"D\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(E, \\"E\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(_default, \\"default\\", __FILENAME__);
}();

;"
`;

exports[`tags potential React components counter.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
class Counter {}

const _default = () => React.createElement(
  \\"div\\",
  null,
  React.createElement(Counter, null)
);

exports.default = _default;
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(Counter, \\"Counter\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(_default, \\"default\\", __FILENAME__);
}();

;"
`;

exports[`tags potential React components issue 246.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.spread = spread;
function spread(...args) {
  return args.push(1);
}
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(spread, \\"spread\\", __FILENAME__);
}();

;"
`;

exports[`tags potential React components name clash.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
const _default = 10;
const _default2 = 42;
exports.default = _default2;
;

var _temp = function () {
  if (typeof __REACT_HOT_LOADER__ === 'undefined') {
    return;
  }

  __REACT_HOT_LOADER__.register(_default, \\"_default\\", __FILENAME__);

  __REACT_HOT_LOADER__.register(_default2, \\"default\\", __FILENAME__);
}();

;"
`;
